Adicionado texto na imagem de fundo

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <header class="main-header">
         <div class="logo">
-            <img src="./img/logo 2.png" alt="logo">
+            <img src="./img/logo.png" alt="logo">
         </div>
         <nav>
             <ul>
@@ -35,13 +35,12 @@
     </header>
     <main>
         <div class="banner">
-            <img src="./img/taylor-swift.jpg" alt="aylor-swift">
             <div class="text-banner">
                 <h1>
                 TS Music
                 </h1>
                 <p>
-                    Confira todos os gêneros musicais e diversos artistas no catálogo da TS Music
+                Confira todos os gêneros musicais e diversos artistas no catálogo da TS Music
                 </p> 
             </div>       
         </div>
