--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
     <link rel="stylesheet" href="./css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Work+Sans:ital,wght@0,100;0,200;0,300;0,400;1,100&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Ms+Madi&family=Work+Sans:ital,wght@0,100;0,200;0,300;0,400;1,100&display=swap" rel="stylesheet">
     <title>TS Music</title>
     <link rel="shortcut icon" href="favicon.ico.png">
 </head>
 <body>
     <header class="main-header">
         <div class="logo">
-            <img src="./img/logo.png" alt="logo">
+            <img src="./img/logo-branco.png" alt="logo">
         </div>
         <nav>
             <ul>
