adicionado mais conteúdo

--- a/index.html
+++ b/index.html
@@ -34,16 +34,17 @@
         </nav>
     </header>
     <main>
-        <div class="banner">
+        <section class="banner">
             <div class="text-banner">
                 <h1>
                 TS Music
                 </h1>
                 <p>
                 Confira todos os gêneros musicais e diversos artistas no catálogo da TS Music
-                </p> 
+                </p>
+                <button>Explorar</button>
             </div>       
-        </div>
+        </section>
         <h2>Itens</h2>
         <section class="main-section">
             <div class="card">
@@ -121,7 +122,13 @@
         </section>
     </main>
     <footer>
-
+        <div class="inicial-msg">
+            <h3>Tamires Sousa</h3>
+            <p>Responsável pelo desenvolvimento da página</p>
+        </div>
+        <div class="final-msg">
+            <p>Checkpoint II desenvolvido em 2022</p>
+        </div>
     </footer>
 </body>
 </html>
