--- a/index.html
+++ b/index.html
@@ -154,6 +154,14 @@
         <div class="inicial-msg">
             <h3>Tamires Sousa</h3>
             <p>Responsável pelo desenvolvimento da página</p>
+            <div class="contato">
+                <a href="https://www.linkedin.com/in/tamires-sousa-b692ba1a4/">
+                    <img src="./img/linkedIn.png" alt="logo linkedIn">
+                </a>
+                <a href="https://github.com/tamiressousa">
+                    <img src="./img/github.png" alt="logo github">
+                </a>
+            </div>
         </div>
         <div class="final-msg">
             <p>Checkpoint II desenvolvido em 2022</p>
