--- a/index.html
+++ b/index.html
@@ -68,16 +68,15 @@
                 <img src="./img/anitta.png" alt="Anitta">
                 <div class="info">
                     <h3>Anitta</h3>
-                    <p> Músicas
-                        Envolver
+                    <p>Músicas</p>
+                    <p>Envolver</p> 
                         Versions of Me · 2022
-                        DANÇARINA
+                    <p>DANÇARINA</p>
                         Versions of Me · 2022
-                        La Loto
+                    <p>La Loto</p> 
                         La Loto · 2022
-                        Envolver Remix
+                    <p>Envolver Remix</p>
                         Envolver Remix · 2022
-                    </p>
                     <a href="">Abrir</a>
                 </div>
             </div>
