Alterado tamanho das imagens, mudança de banner e header

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <header class="main-header">
         <div class="logo">
-            <img src="./img/logo-branco.png" alt="logo">
+            <img src="./img/logo.png" alt="logo">
         </div>
         <nav>
             <ul>
@@ -51,16 +51,11 @@
                 <img src="./img/adele.png" alt="Adele">
                 <div class="info">
                     <h3>Adele</h3>
-                    <p> Músicas 
-                        Easy on Me
-                        Easy On Me · 2021
-                        Hello
-                        25 · 2015
-                        Rolling in the Deep
-                        21 · 2011
-                        Someone Like You
-                        21 · 2011
-                    </p>
+                    <p>Músicas</p> 
+                    <p>Easy on Me · Easy On Me - 2021</p>
+                    <p>Hello · 25 - 2015</p>
+                    <p>Rolling in the Deep · 21 - 2011</p>
+                    <p>Someone Like You · 21 - 2011</p>
                     <a href="">Abrir</a>
                 </div>
             </div>
@@ -69,14 +64,10 @@
                 <div class="info">
                     <h3>Anitta</h3>
                     <p>Músicas</p>
-                    <p>Envolver</p> 
-                        Versions of Me · 2022
-                    <p>DANÇARINA</p>
-                        Versions of Me · 2022
-                    <p>La Loto</p> 
-                        La Loto · 2022
-                    <p>Envolver Remix</p>
-                        Envolver Remix · 2022
+                    <p>Envolver · Versions of Me - 2022</p>
+                    <p>DANÇARINA · Versions of Me - 2022</p>
+                    <p>La Loto · La Loto - 2022</p>
+                    <p>Envolver Remix · Envolver Remix - 2022</p>
                     <a href="">Abrir</a>
                 </div>
             </div>
@@ -84,15 +75,11 @@
                 <img src="./img/chris-martin.png" alt="Chris Martin">
                 <div class="info">
                     <h3>Coldplay</h3>
-                    <p> Músicas
-                        Hymn for the Weekend
-                        A Head Full of Dreams · 2015
-                        Yellow
-                        Parachutes · 2000
-                        Something Just Like This
-                        Paradise
-                        Mylo Xyloto · 2011
-                    </p>
+                    <p>Músicas</p>
+                    <p>Hymn for the Weekend · A Head Full of Dreams - 2015</p>
+                    <p>Yellow · Parachutes - 2000</p>
+                    <p>Something Just Like This</p>
+                    <p>Paradise · Mylo Xyloto - 2011</p>
                     <a href="">Abrir</a>
                 </div>
             </div>
@@ -100,16 +87,11 @@
                 <img src="./img/demi-lovato.png" alt="Demi Lovato">
                 <div class="info">
                     <h3>Demi Lovato</h3>
-                    <p> Músicas
-                        Heart Attack
-                        Demi · 2013
-                        Cool for the Summer
-                        Dosis de dopamina · 2022
-                        Cool for the Summer
-                        Pop Party 15 · 2015
-                        Confident
-                        Confident · 2015
-                    </p>
+                    <p>Músicas</p>
+                    <p>Heart Attack · Demi - 2013</p>
+                    <p>Cool for the Summer · Dosis de dopamina - 2022</p>
+                    <p>Cool for the Summer · Pop Party 15 - 2015</p>
+                    <p>Confident · Confident - 2015</p>
                     <a href="">Abrir</a>
                 </div>
             </div>
@@ -117,33 +99,23 @@
                 <img src="./img/lady-gaga.png" alt="Lady Gaga">
                 <div class="info">
                     <h3>Lady Gaga</h3>
-                    <p> Músicas
-                        Bad Romance
-                        Bad Romance · 2009
-                        Poker Face
-                        The Fame · 2008
-                        Always Remember Us This Way
-                        A Star Is Born · 2018
-                        Shallow
-                        A Star Is Born · 2018
-                    </p>
+                    <p>Músicas</p>
+                    <p>Bad Romance · Bad Romance - 2009</p>
+                    <p>Poker Face · The Fame - 2008</p>
+                    <p>Always Remember Us This Way · A Star Is Born - 2018</p>
+                    <p>Shallow · A Star Is Born - 2018</p>
                     <a href="">Abrir</a>
                 </div>  
             </div>
             <div class="card">
-                <img src="./img/taylor.png" alt="Taylor Swift">
+                <img src="./img/taylor-swift.png" alt="Taylor Swift">
                 <div class="info">
                     <h3>Taylor Swift</h3>
-                    <p> Músicas
-                        Bad Blood
-                        1989 · 2014
-                        Look What You Made Me Do
-                        Reputation · 2017
-                        Blank Space
-                        1989 · 2014
-                        Don’t Blame Me
-                        Reputation · 2017
-                    </p>
+                    <p>Músicas</p>
+                    <p>Bad Blood · 1989 - 2014</p>
+                    <p>Look What You Made Me Do · Reputation - 2017</p>
+                    <p>Blank Space · 1989 - 2014</p>
+                    <p>Don’t Blame Me · Reputation - 2017</p>
                     <a href="">Abrir</a>
                 </div>
             </div>
