alterado descrição do banner

--- a/index.html
+++ b/index.html
@@ -42,7 +42,9 @@
                 <p>
                 Confira todos os gêneros musicais e diversos artistas no catálogo da TS Music
                 </p>
-                <button>Explorar</button>
+                <div class="botão">
+                    <button>Explorar</button>
+                </div>
             </div>       
         </section>
         <h2>Itens</h2>
