--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <header class="main-header">
         <div class="logo">
-            <img src="./img/logo.png" alt="logo">
+            <img src="./img/TS.png" alt="logo">
         </div>
         <nav>
             <ul>
