--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                     <p>Hello · 25 - 2015</p>
                     <p>Rolling in the Deep · 21 - 2011</p>
                     <p>Someone Like You · 21 - 2011</p>
-                    <a href="">Abrir</a>
+                    <button>Abrir</button>
                 </div>
             </div>
             <div class="card">
@@ -70,7 +70,7 @@
                     <p>DANÇARINA · Versions of Me - 2022</p>
                     <p>La Loto · La Loto - 2022</p>
                     <p>Envolver Remix · Envolver Remix - 2022</p>
-                    <a href="">Abrir</a>
+                    <button>Abrir</button>
                 </div>
             </div>
             <div class="card">
@@ -82,7 +82,7 @@
                     <p>Yellow · Parachutes - 2000</p>
                     <p>Something Just Like This</p>
                     <p>Paradise · Mylo Xyloto - 2011</p>
-                    <a href="">Abrir</a>
+                    <button>Abrir</button>
                 </div>
             </div>
             <div class="card">
@@ -94,7 +94,7 @@
                     <p>Cool for the Summer · Dosis de dopamina - 2022</p>
                     <p>Cool for the Summer · Pop Party 15 - 2015</p>
                     <p>Confident · Confident - 2015</p>
-                    <a href="">Abrir</a>
+                    <button>Abrir</button>
                 </div>
             </div>
             <div class="card">
@@ -106,7 +106,7 @@
                     <p>Poker Face · The Fame - 2008</p>
                     <p>Always Remember Us This Way · A Star Is Born - 2018</p>
                     <p>Shallow · A Star Is Born - 2018</p>
-                    <a href="">Abrir</a>
+                    <button>Abrir</button>
                 </div>  
             </div>
             <div class="card">
@@ -118,7 +118,7 @@
                     <p>Look What You Made Me Do · Reputation - 2017</p>
                     <p>Blank Space · 1989 - 2014</p>
                     <p>Don’t Blame Me · Reputation - 2017</p>
-                    <a href="">Abrir</a>
+                    <button>Abrir</button>
                 </div>
             </div>
         </section>
