Aplicado link do scroll

--- a/index.html
+++ b/index.html
@@ -19,126 +19,128 @@
         <nav>
             <ul>
                 <li>
-                    <a href="#">Home</a>
+                    <a href="#home">Home</a>
                 </li>
                 <li>
-                    <a href="#">Itens</a>
+                    <a href="#itens">Itens</a>
                 </li>
                 <li>
-                    <a href="#">Sobre nós</a>
+                    <a href="#sobre">Sobre nós</a>
                 </li>
                 <li>
-                    <a href="#">Login</a>
+                    <a href="#login">Login</a>
                 </li>
             </ul>
         </nav>
     </header>
-    <main>
-        <section class="banner">
-            <div class="text-banner">
-                <h1>
-                TS Music
-                </h1>
-                <p>
-                Confira todos os gêneros musicais e diversos artistas no catálogo da TS Music
-                </p>
-                <div class="botão">
-                    <button>Explorar</button>
+    <scroll-conatiner>
+        <main>
+            <section id="home" class="banner">
+                <div class="text-banner">
+                    <h1>
+                    TS Music
+                    </h1>
+                    <p>
+                    Confira todos os gêneros musicais e diversos artistas no catálogo da TS Music
+                    </p>
+                    <div class="botão">
+                        <button>Explorar</button>
+                    </div>
+                </div>       
+            </section>
+            <h2 id="itens">Itens</h2>
+            <section class="main-section">
+                <div class="card">
+                    <img src="./img/adele.png" alt="Adele">
+                    <div class="info">
+                        <h3>Adele</h3>
+                        <p>Músicas</p> 
+                        <p>Easy on Me · Easy On Me - 2021</p>
+                        <p>Hello · 25 - 2015</p>
+                        <p>Rolling in the Deep · 21 - 2011</p>
+                        <p>Someone Like You · 21 - 2011</p>
+                        <button>Abrir</button>
+                    </div>
                 </div>
-            </div>       
-        </section>
-        <h2>Itens</h2>
-        <section class="main-section">
-            <div class="card">
-                <img src="./img/adele.png" alt="Adele">
-                <div class="info">
-                    <h3>Adele</h3>
-                    <p>Músicas</p> 
-                    <p>Easy on Me · Easy On Me - 2021</p>
-                    <p>Hello · 25 - 2015</p>
-                    <p>Rolling in the Deep · 21 - 2011</p>
-                    <p>Someone Like You · 21 - 2011</p>
-                    <button>Abrir</button>
+                <div class="card">
+                    <img src="./img/anitta.png" alt="Anitta">
+                    <div class="info">
+                        <h3>Anitta</h3>
+                        <p>Músicas</p>
+                        <p>Envolver · Versions of Me - 2022</p>
+                        <p>DANÇARINA · Versions of Me - 2022</p>
+                        <p>La Loto · La Loto - 2022</p>
+                        <p>Envolver Remix · Envolver Remix - 2022</p>
+                        <button>Abrir</button>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="./img/chris-martin.png" alt="Chris Martin">
+                    <div class="info">
+                        <h3>Coldplay</h3>
+                        <p>Músicas</p>
+                        <p>Hymn for the Weekend · A Head Full of Dreams - 2015</p>
+                        <p>Yellow · Parachutes - 2000</p>
+                        <p>Something Just Like This</p>
+                        <p>Paradise · Mylo Xyloto - 2011</p>
+                        <button>Abrir</button>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="./img/demi-lovato.png" alt="Demi Lovato">
+                    <div class="info">
+                        <h3>Demi Lovato</h3>
+                        <p>Músicas</p>
+                        <p>Heart Attack · Demi - 2013</p>
+                        <p>Cool for the Summer · Dosis de dopamina - 2022</p>
+                        <p>Cool for the Summer · Pop Party 15 - 2015</p>
+                        <p>Confident · Confident - 2015</p>
+                        <button>Abrir</button>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="./img/lady-gaga.png" alt="Lady Gaga">
+                    <div class="info">
+                        <h3>Lady Gaga</h3>
+                        <p>Músicas</p>
+                        <p>Bad Romance · Bad Romance - 2009</p>
+                        <p>Poker Face · The Fame - 2008</p>
+                        <p>Always Remember Us This Way · A Star Is Born - 2018</p>
+                        <p>Shallow · A Star Is Born - 2018</p>
+                        <button>Abrir</button>
+                    </div>  
+                </div>
+                <div class="card">
+                    <img src="./img/taylor-swift.png" alt="Taylor Swift">
+                    <div class="info">
+                        <h3>Taylor Swift</h3>
+                        <p>Músicas</p>
+                        <p>Bad Blood · 1989 - 2014</p>
+                        <p>Look What You Made Me Do · Reputation - 2017</p>
+                        <p>Blank Space · 1989 - 2014</p>
+                        <p>Don’t Blame Me · Reputation - 2017</p>
+                        <button>Abrir</button>
+                    </div>
+                </div>
+            </section>
+        </main>
+        <footer id="sobre">
+            <div class="inicial-msg">
+                <h3>Tamires Sousa</h3>
+                <p>Responsável pelo desenvolvimento da página</p>
+                <div class="contato">
+                    <a href="https://www.linkedin.com/in/tamires-sousa-b692ba1a4/">
+                        <img src="./img/linkedIn.png" alt="logo linkedIn">
+                    </a>
+                    <a href="https://github.com/tamiressousa">
+                        <img src="./img/github.png" alt="logo github">
+                    </a>
                 </div>
             </div>
-            <div class="card">
-                <img src="./img/anitta.png" alt="Anitta">
-                <div class="info">
-                    <h3>Anitta</h3>
-                    <p>Músicas</p>
-                    <p>Envolver · Versions of Me - 2022</p>
-                    <p>DANÇARINA · Versions of Me - 2022</p>
-                    <p>La Loto · La Loto - 2022</p>
-                    <p>Envolver Remix · Envolver Remix - 2022</p>
-                    <button>Abrir</button>
-                </div>
+            <div class="final-msg">
+                <p>Checkpoint II desenvolvido em 2022</p>
             </div>
-            <div class="card">
-                <img src="./img/chris-martin.png" alt="Chris Martin">
-                <div class="info">
-                    <h3>Coldplay</h3>
-                    <p>Músicas</p>
-                    <p>Hymn for the Weekend · A Head Full of Dreams - 2015</p>
-                    <p>Yellow · Parachutes - 2000</p>
-                    <p>Something Just Like This</p>
-                    <p>Paradise · Mylo Xyloto - 2011</p>
-                    <button>Abrir</button>
-                </div>
-            </div>
-            <div class="card">
-                <img src="./img/demi-lovato.png" alt="Demi Lovato">
-                <div class="info">
-                    <h3>Demi Lovato</h3>
-                    <p>Músicas</p>
-                    <p>Heart Attack · Demi - 2013</p>
-                    <p>Cool for the Summer · Dosis de dopamina - 2022</p>
-                    <p>Cool for the Summer · Pop Party 15 - 2015</p>
-                    <p>Confident · Confident - 2015</p>
-                    <button>Abrir</button>
-                </div>
-            </div>
-            <div class="card">
-                <img src="./img/lady-gaga.png" alt="Lady Gaga">
-                <div class="info">
-                    <h3>Lady Gaga</h3>
-                    <p>Músicas</p>
-                    <p>Bad Romance · Bad Romance - 2009</p>
-                    <p>Poker Face · The Fame - 2008</p>
-                    <p>Always Remember Us This Way · A Star Is Born - 2018</p>
-                    <p>Shallow · A Star Is Born - 2018</p>
-                    <button>Abrir</button>
-                </div>  
-            </div>
-            <div class="card">
-                <img src="./img/taylor-swift.png" alt="Taylor Swift">
-                <div class="info">
-                    <h3>Taylor Swift</h3>
-                    <p>Músicas</p>
-                    <p>Bad Blood · 1989 - 2014</p>
-                    <p>Look What You Made Me Do · Reputation - 2017</p>
-                    <p>Blank Space · 1989 - 2014</p>
-                    <p>Don’t Blame Me · Reputation - 2017</p>
-                    <button>Abrir</button>
-                </div>
-            </div>
-        </section>
-    </main>
-    <footer>
-        <div class="inicial-msg">
-            <h3>Tamires Sousa</h3>
-            <p>Responsável pelo desenvolvimento da página</p>
-            <div class="contato">
-                <a href="https://www.linkedin.com/in/tamires-sousa-b692ba1a4/">
-                    <img src="./img/linkedIn.png" alt="logo linkedIn">
-                </a>
-                <a href="https://github.com/tamiressousa">
-                    <img src="./img/github.png" alt="logo github">
-                </a>
-            </div>
-        </div>
-        <div class="final-msg">
-            <p>Checkpoint II desenvolvido em 2022</p>
-        </div>
-    </footer>
+        </footer>
+    </scroll-conatiner>
 </body>
 </html>
