tentativa de barrinhas no responsivo

--- a/index.html
+++ b/index.html
@@ -8,14 +8,17 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Ms+Madi&family=Work+Sans:ital,wght@0,100;0,200;0,300;0,400;1,100&display=swap" rel="stylesheet">
-    <title>TS Music</title>
     <link rel="shortcut icon" href="./img/favicon.ico.png">
+    <title>TS Music</title>
+    
 </head>
 <body>
     <header class="main-header">
         <div class="logo">
             <img src="./img/TS.png" alt="logo">
         </div>
+        <input type="checkbox" id="bt-menu">
+        <label for="bt-menu">&#9776;</label>
         <nav>
             <ul>
                 <li>
