terminado home e responsivo

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
                     <a href="#login">Login</a>
                 </li>
             </ul>
+            <label for="">&#9776;</label>
         </nav>
     </header>
         <main>
