--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                     Confira todos os gêneros musicais e diversos artistas no catálogo da TS Music
                     </p>
                     <div class="botão">
-                        <button>Explorar</button>
+                        <a href="#itens">Explorar</a>
                     </div>
                 </div>       
             </section>
@@ -60,7 +60,7 @@
                         <p>Hello · 25 - 2015</p>
                         <p>Rolling in the Deep · 21 - 2011</p>
                         <p>Someone Like You · 21 - 2011</p>
-                        <button>Abrir</button>
+                        <a href="">Abrir</a>
                     </div>
                 </div>
                 <div class="card">
@@ -72,7 +72,7 @@
                         <p>DANÇARINA · Versions of Me - 2022</p>
                         <p>La Loto · La Loto - 2022</p>
                         <p>Envolver Remix · Envolver Remix - 2022</p>
-                        <button>Abrir</button>
+                        <a href="">Abrir</a>
                     </div>
                 </div>
                 <div class="card">
@@ -84,7 +84,7 @@
                         <p>Yellow · Parachutes - 2000</p>
                         <p>Something Just Like This</p>
                         <p>Paradise · Mylo Xyloto - 2011</p>
-                        <button>Abrir</button>
+                        <a href="">Abrir</a>
                     </div>
                 </div>
                 <div class="card">
@@ -96,7 +96,7 @@
                         <p>Cool for the Summer · Dosis de dopamina - 2022</p>
                         <p>Cool for the Summer · Pop Party 15 - 2015</p>
                         <p>Confident · Confident - 2015</p>
-                        <button>Abrir</button>
+                        <a href="">Abrir</a>
                     </div>
                 </div>
                 <div class="card">
@@ -108,7 +108,7 @@
                         <p>Poker Face · The Fame - 2008</p>
                         <p>Always Remember Us This Way · A Star Is Born - 2018</p>
                         <p>Shallow · A Star Is Born - 2018</p>
-                        <button>Abrir</button>
+                        <a href="">Abrir</a>
                     </div>  
                 </div>
                 <div class="card">
@@ -120,7 +120,7 @@
                         <p>Look What You Made Me Do · Reputation - 2017</p>
                         <p>Blank Space · 1989 - 2014</p>
                         <p>Don’t Blame Me · Reputation - 2017</p>
-                        <button>Abrir</button>
+                        <a href="">Abrir</a>
                     </div>
                 </div>
             </section>
