Adicionado página Adele

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                         <p>Hello · 25 - 2015</p>
                         <p>Rolling in the Deep · 21 - 2011</p>
                         <p>Someone Like You · 21 - 2011</p>
-                        <a href="">Abrir</a>
+                        <a href="https://tamiressousa.github.io/front-I-checkpoint-II-Adele/">Abrir</a>
                     </div>
                 </div>
                 <div class="card">
